--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-absl-py==0.15.0
 astor==0.8.1
 astunparse==1.6.3
-cached-property==1.5.2
+charset-normalizer==1.5.2
+click==8.0.3
+cached-property==2.0.12
 cachetools==5.0.0
 certifi==2021.10.8
-charset-normalizer==2.0.12
+entrypoints==0.3
 flatbuffers==1.12
+Flask==0.12.2
 gast==0.4.0
 google-auth==2.6.2
 google-auth-oauthlib==0.4.6
@@ -14,37 +16,29 @@ grpcio==1.34.1
 gunicorn==19.7.1
 h5py==3.1.0
 idna==3.3
-importlib-metadata==4.11.3
 imutils==0.4.6
-Keras==2.1.5
-Keras-Applications==1.0.8
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-Markdown==3.3.6
+jedi==0.17.0
+Keras==2.2.4
 MarkupSafe==2.0.1
-mock==4.0.3
-numpy==1.19.5
-oauthlib==3.2.0
+matplotlib==2.2.2
+mistune==0.8.4
+mkl-fft==1.3.0
+mkl-random==1.1.1
+mkl-service==2.3.0
 olefile==0.46
-opt-einsum==3.3.0
-Pillow==4.1.1
-protobuf==3.20.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyYAML==6.0
+Pillow==4.2.1
+protobuf==3.17.2
+pyreadline==2.1
+pytz==2021.3
+pywin32==228
+pywinpty==0.5.7
+PyYAML==5.4.1
 requests==2.27.1
-requests-oauthlib==1.3.1
-rsa==4.8
-scipy==1.7.3
-six==1.15.0
-tensorboard==1.13.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
+tensorboard==1.10.0
+tensorflow==1.10.0
 termcolor==1.1.0
-typing-extensions==3.7.4.3
-urllib3==1.26.9
+terminado==0.9.4
+urllib3==1.26.8
+webencodings==0.5.1
 Werkzeug==0.16.1
-wrapt==1.12.1
-zipp==3.7.0
+wincertstore==0.2
