--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411
 Keras-Preprocessing @ file:///tmp/build/80754af9/keras-preprocessing_1612283640596/work
 kiwisolver @ file:///C:/ci/kiwisolver_1612282446297/work
 Markdown @ file:///C:/ci/markdown_1614364003005/work
-MarkupSafe @ file:///C:/ci/markupsafe_1621528313524/work
+MarkupSafe==2.0.1
 matplotlib==2.2.2
 mistune==0.8.4
 mkl-fft==1.3.0
