--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,55 @@
-absl-py @ file:///opt/conda/conda-bld/absl-py_1639803114343/work
-argon2-cffi @ file:///C:/ci/argon2-cffi_1613037829118/work
+absl-py==0.15.0
 astor==0.8.1
-async-generator==1.10
-attrs @ file:///opt/conda/conda-bld/attrs_1642510447205/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-certifi==2021.5.30
-cffi @ file:///C:/ci/cffi_1625831763871/work
+astunparse==1.6.3
+cached-property==1.5.2
+cachetools==5.0.0
+certifi==2021.10.8
 charset-normalizer==2.0.12
-click==8.0.3
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1632508026186/work
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-coverage @ file:///C:/ci/coverage_1614614921360/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-Cython @ file:///C:/ci/cython_1626257069493/work
-dataclasses @ file:///tmp/build/80754af9/dataclasses_1614363715916/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-entrypoints==0.3
+click==8.1.2
+colorama==0.4.4
 Flask==0.12.2
-gast @ file:///tmp/build/80754af9/gast_1637837472536/work
-grpcio @ file:///C:/ci/grpcio_1614884461394/work
+flatbuffers==1.12
+gast==0.4.0
+google-auth==2.6.2
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.34.1
 gunicorn==19.7.1
-h5py==2.7.1
+h5py==3.1.0
 idna==3.3
-importlib-metadata @ file:///C:/ci/importlib-metadata_1631916885413/work
+importlib-metadata==4.11.3
 imutils==0.4.6
-ipykernel @ file:///C:/ci/ipykernel_1596206775157/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1593446240034/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-jedi==0.17.0
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1635780242639/work
-jsonschema @ file:///Users/ktietz/demo/mc3/conda-bld/jsonschema_1630511932244/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-core @ file:///C:/ci/jupyter_core_1633402348205/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-Keras==2.2.4
-Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
-Keras-Preprocessing @ file:///tmp/build/80754af9/keras-preprocessing_1612283640596/work
-kiwisolver @ file:///C:/ci/kiwisolver_1612282446297/work
-Markdown @ file:///C:/ci/markdown_1614364003005/work
+itsdangerous==2.1.2
+Jinja2==3.1.1
+Keras==2.1.5
+Keras-Applications==1.0.8
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
+Markdown==3.3.6
 MarkupSafe==2.0.1
-matplotlib==2.2.2
-mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-nb-conda-kernels @ file:///C:/ci/nb_conda_kernels_1606758020244/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///C:/ci/nbconvert_1601896775581/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-notebook @ file:///C:/ci/notebook_1629205950149/work
-numpy @ file:///C:/ci/numpy_and_numpy_base_1603480701039/work
+mock==4.0.3
+numpy==1.19.5
+oauthlib==3.2.0
 olefile==0.46
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas @ file:///C:/ci/pandas_1608056614942/work
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow==4.2.1
-prometheus-client @ file:///opt/conda/conda-bld/prometheus_client_1643788673601/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
-protobuf==3.17.2
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
-pyreadline==2.1
-pyrsistent @ file:///C:/ci/pyrsistent_1600141799440/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz==2021.3
-pywin32==228
-pywinpty==0.5.7
-PyYAML==5.4.1
-pyzmq @ file:///C:/ci/pyzmq_1628276569449/work
+opt-einsum==3.3.0
+Pillow==9.1.0
+protobuf==3.20.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyYAML==6.0
 requests==2.27.1
-scipy @ file:///C:/ci/scipy_1597675683670/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-spyder-kernels @ file:///C:/ci/spyder-kernels_1632249893674/work
-tensorboard==1.10.0
-tensorflow==1.10.0
+requests-oauthlib==1.3.1
+rsa==4.8
+scipy==1.7.3
+six==1.15.0
+tensorboard==1.13.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
 termcolor==1.1.0
-terminado==0.9.4
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
-tornado @ file:///C:/ci/tornado_1606942379977/work
-traitlets @ file:///C:/ci/traitlets_1632759765830/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
-urllib3==1.26.8
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
+typing-extensions==3.7.4.3
+urllib3==1.26.9
 Werkzeug==0.16.1
-wincertstore==0.2
-zipp @ file:///tmp/build/80754af9/zipp_1633618647012/work
+wrapt==1.12.1
+zipp==3.7.0
