--- a/requirements.txt
+++ b/requirements.txt
@@ -20,13 +20,14 @@ idna==3.3
 importlib-metadata==4.11.3
 imutils==0.4.6
 itsdangerous==2.1.2
+jedi==0.17.0
 Jinja2==3.0.1
 Keras==2.1.5
 Keras-Applications==1.0.8
 keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
 Markdown==3.3.6
-MarkupSafe==2.1.1
+MarkupSafe==2.1.0
 mock==4.0.3
 numpy==1.19.5
 oauthlib==3.2.0
