--- a/requirements.txt
+++ b/requirements.txt
@@ -21,15 +21,18 @@ importlib-metadata==4.11.3
 imutils==0.4.6
 itsdangerous==2.1.2
 jedi==0.17.0
-Jinja2==3.0.1
-Keras==2.1.5
+Jinja2==3.0.2
+Keras==2.2.4
 Keras-Applications==1.0.8
+keras-base==2.2.4
 keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
-Markdown==3.3.6
-MarkupSafe==2.1.0
+markdown==3.3.4
+markupSafe==2.0.1
+matplotlib==2.2.2
 mock==4.0.3
 numpy==1.19.5
+opencv==3.3.1 
 oauthlib==3.2.0
 olefile==0.46
 opt-einsum==3.3.0
@@ -43,14 +46,16 @@ requests-oauthlib==1.3.1
 rsa==4.8
 scipy==1.7.3
 six==1.15.0
-tensorboard==1.13.1
+tensorboard==1.10.0
+tensorflow-base==1.10.0 
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==1.13.1
+tensorflow==1.10.0
 tensorflow-estimator==1.13.0
 termcolor==1.1.0
 typing-extensions==3.7.4.3
 urllib3==1.26.9
-Werkzeug==2.0.3
+Werkzeug==0.16.1
 wrapt==1.12.1
+yaml==0.2.5 
 zipp==3.7.0
