--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,83 @@
-absl-py==0.15.0
-astor==0.8.1
-astunparse==1.6.3
-cached-property==1.5.2
-cachetools==5.0.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
-click==8.1.2
-colorama==0.4.4
-Flask==2.0.3
-flatbuffers==1.12
-gast==0.4.0
-google-auth==2.6.2
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.34.1
-gunicorn==19.7.1
-h5py==3.1.0
-idna==3.3
-importlib-metadata==4.11.3
-imutils==0.4.6
-itsdangerous==2.1.2
-Jinja2==3.1.1
-Keras==2.1.5
-Keras-Applications==1.0.8
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-Markdown==3.3.6
-MarkupSafe==2.1.1
-mock==4.0.3
-numpy==1.19.5
-oauthlib==3.2.0
-olefile==0.46
-opt-einsum==3.3.0
-Pillow==9.1.0
-protobuf==3.20.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyYAML==6.0
-requests==2.27.1
-requests-oauthlib==1.3.1
-rsa==4.8
-scipy==1.7.3
-six==1.15.0
-tensorboard==1.13.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
-termcolor==1.1.0
-typing-extensions==3.7.4.3
-urllib3==1.26.9
-Werkzeug==0.16.1
-wrapt==1.12.1
-zipp==3.7.0
+_tflow_select==2.1.0                       
+absl-py==0.15.0             
+argon2-cffi==20.1.0           
+astor==0.8.1            
+async_generator==1.10             
+attrs==21.4.0             
+backcall==0.2.0              
+blas==1.0                         
+bleach==4.1.0              
+ca-certificates==2022.3.29            
+certifi==2021.5.30        
+cffi==1.14.6           
+charset-normalizer==2.0.12                       
+click==8.0.3              
+cloudpickle==2.0.0              
+colorama==0.4.4                     
+dataclasses==0.8                
+decorator==5.1.1              
+defusedxml==0.7.1              
+entrypoints==0.3                      
+flask==0.12.2           
+freetype==2.8                  
+gast==0.5.3              
+grpcio==1.36.1           
+gunicorn==19.7.1                       
+h5py==2.7.1            
+hdf5==1.10.2               
+icc_rt==2019.0.0             
+icu==58.2                 
+idna==3.3                          
+importlib-metadata==4.8.1            
+importlib_metadata==4.8.1                
+imutils==0.4.6                        
+intel-openmp==2022.0.0          
+ipykernel==5.3.4            
+ipython==7.16.1           
+ipython_genutils==0.2.0              
+itsdangerous==2.0.1              
+jedi==0.17.0                   
+jinja2==3.0.2              
+jpeg==9d                   
+jsonschema==3.2.0                                
+keras==2.2.4                         
+keras-applications==1.0.8                      
+keras-base==2.2.4                    
+keras-preprocessing==1.1.2              
+kiwisolver==1.3.1            
+markdown==3.3.4            
+markupsafe==2.0.1            
+matplotlib==2.2.2            
+notebook==6.4.3
+numpy==1.19.2
+numpy-base==1.19.2
+olefile==0.46                        
+packaging==21.3               
+pandas==1.1.5            
+pandoc==2.12                 
+pandocfilters==1.5.0              
+parso==0.8.3              
+pickleshare==0.7.5           
+pillow==4.2.1            
+pip==21.2.2           
+prometheus_client==0.13.1             
+prompt-toolkit==3.0.20             
+protobuf==3.17.2                            
+pyyaml==5.4.1                             
+requests==2.27.1                       
+scipy==1.5.2                      
+setuptools==58.0.4                                
+sqlite==3.37.2               
+tensorboard==1.13.0           
+tensorflow==1.13.0
+tensorflow-base==1.13.0          
+tensorflow-gpu==1.13.0               
+termcolor==1.1.0            
+terminado==0.9.4            
+testpath==0.5.0                   
+werkzeug==0.16.1                     
+wheel==0.37.1             
+wincertstore==0.2                           
+yaml==0.2.5                
+zipp==3.6.0              
+zlib==1.2.11                            
