--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,7 @@
-absl-py==0.15.0             
-argon2-cffi==20.1.0           
-astor==0.8.1            
-async_generator==1.10             
-attrs==21.4.0                  
-certifi==2021.5.30        
-cffi==1.14.6           
-charset-normalizer==2.0.12                       
-click==8.0.3              
-cloudpickle==2.0.0              
-colorama==0.4.4                                 
-entrypoints==0.3                      
-flask==0.12.2                        
-gast==0.5.3              
-grpcio==1.36.1           
-gunicorn==19.7.1                       
-h5py==2.7.1                             
-idna==3.3                          
-importlib-metadata==4.8.1            
-importlib_metadata==4.8.1                
-imutils==0.4.6                               
-ipykernel==5.3.4            
-ipython==7.16.1           
-ipython_genutils==0.2.0              
-itsdangerous==2.0.1              
-jedi==0.17.0                   
-jinja2==3.0.2                               
-jsonschema==3.2.0                                
-keras==2.2.4                         
-keras-applications==1.0.8                                         
-keras-preprocessing==1.1.2                         
-markdown==3.3.4            
-markupsafe==2.0.1            
-matplotlib==2.2.2            
-numpy==1.19.2
-olefile==0.46                        
-packaging==21.3               
-pandas==1.1.5                           
-pillow==4.2.1                                      
-pyyaml==5.4.1                             
-requests==2.27.1                       
-scipy==1.5.2                      
-setuptools==58.0.4                                            
-tensorboard==1.13.1
+Flask==
+gunicorn==0.19.7
+Marupsafe==2.0.1
 tensorflow==1.13.1
-tensorflow-base==1.13.1
-termcolor==1.1.0
-terminado==0.9.4
-testpath==0.5.0
-werkzeug==0.16.1
-wheel==0.37.1
-wincertstore==0.2
-yaml==0.2.5
-zipp==3.6.0
-zlib==1.2.11
+Pillow==
+keras==
+h5py==
