--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==
-gunicorn==0.19.7
-Marupsafe==2.0.1
-tensorflow==1.13.1
-Pillow==
-keras==
-h5py==
+tensorflow==2.5.0
+Flask==0.12.2
+gunicorn==19.7.1
+keras==2.1.5
+imutils==0.4.6
+h5py==3.1.0
+Pillow==4.1.1
+MarkupSafe==2.0.1
