--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,9 @@ importlib-metadata==4.11.3
 imutils==0.4.6
 itsdangerous==2.0.1
 Jinja2==3.0.1
-Keras==2.1.5
-Keras-Applications==1.0.8
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
+keras==2.1.5
+keras-applications==1.0.8
+keras-preprocessing==1.1.2
 Markdown==3.3.6
 MarkupSafe==2.0.1
 mock==4.0.3
