--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ numpy==1.19.5
 oauthlib==3.2.0
 olefile==0.46
 opt-einsum==3.3.0
-opencv==4.1
+opencv-python
 Pillow==9.1.0
 protobuf==3.20.0
 pyasn1==0.4.8
