--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,9 @@ Jinja2==3.0.1
 keras==2.1.5
 keras-applications==1.0.8
 keras-preprocessing==1.1.2
+libpng==1.6.37
+libprotobuf==3.17.2
+libtiff==4.2.0
 Markdown==3.3.6
 MarkupSafe==2.0.1
 mock==4.0.3
