--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ grpcio==1.34.1
 gunicorn==19.7.1
 h5py==3.1.0
 idna==3.3
-importlib-metadata==4.11.3
+importlib-metadata==4.8.1
 imutils==0.4.6
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -24,6 +24,7 @@ keras-applications==1.0.8
 keras-preprocessing==1.1.2
 Markdown==3.3.6
 MarkupSafe==2.0.1
+matplotlib==2.2.2
 mock==4.0.3
 numpy==1.19.5
 oauthlib==3.2.0
