--- a/requirements.txt
+++ b/requirements.txt
@@ -30,9 +30,9 @@ numpy==1.19.5
 oauthlib==3.2.0
 olefile==0.46
 opt-einsum==3.3.0
-opencv-python
+opencv==3.3.1
 Pillow==4.1.1
-protobuf==3.20.0
+protobuf==3.17.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyYAML==6.0
