--- a/requirements.txt
+++ b/requirements.txt
@@ -39,16 +39,20 @@ PyYAML==6.0
 requests==2.27.1
 requests-oauthlib==1.3.1
 rsa==4.8
-scipy==1.7.3
-six==1.15.0
-tensorboard==1.14.0
-tensorflow==1.14.0
-tensorflow-estimator==1.14.0
+scipy==1.5.2
+six==4.19.8
+tensorboard==1.10.0
+tensorflow==1.10.0
+tensorflow-base==1.10.0
+tensorflow-estimator==1.10.0
 termcolor==1.1.0
-typing-extensions==3.7.4.3
-urllib3==1.26.9
+typing-extensions==3.10.0.2
+urllib3==1.26.8 
 Werkzeug==0.16.1
 wrapt==1.12.1
 ffmpeg
-zipp==3.7.0
+yaml==0.2.5
+zipp==3.6.0
+zlib==1.2.11
+zstd==1.4.9
 
