--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ mock==4.0.3
 oauthlib==3.2.0
 olefile==0.46
 opt-einsum==3.3.0
-opencv-python
+opencv-python-headless
 Pillow==4.1.1
 protobuf==3.17.2
 pyasn1==0.4.8
