--- a/package.json
+++ b/package.json
@@ -21,3 +21,16 @@
   },
   "homepage": "https://github.com/Iamrizzaa/AIrizal#readme"
 }
+"engines": {
+"node": "5.0.0",
+"npm": "4.6.1"
+},
+...
+
+and Server.js as:
+
+...
+var port = process.env.PORT || 3000;
+app.listen(port, "0.0.0.0", function() {
+console.log("Listening on Port 3000");
+});
